--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-      "axios": "^1.13.4",
-      "formik": "^2.4.9",
-      "react": "^19.2.4",
-      "react-dom": "^19.2.4",
-      "react-router": "^7.13.0",
-      "react-router-dom": "^7.13.0",
-      "sass": "^1.97.3",
-      "yup": "^1.7.1"
-    },
+    "axios": "^1.13.4",
+    "formik": "^2.4.9",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-router": "^7.13.0",
+    "react-router-dom": "^7.13.0",
+    "sass": "^1.97.3",
+    "yup": "^1.7.1"
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@testing-library/dom": "^10.4.1",
@@ -39,9 +39,11 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "msw": "^2.12.10",
+    "ts-jest": "^29.4.6",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
